--- a/env.example
+++ b/env.example
@@ -9,6 +9,25 @@ GOOGLE_API_KEY=your_google_api_key_here
 # Get one at: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
+# OpenAI networking / robustness knobs (recommended for OCR w/ images)
+# - OPENAI_TIMEOUT_SECONDS: per-request timeout (seconds). OCR + images can be slow.
+# - OPENAI_MAX_RETRIES: SDK-level retries inside openai-python (transient errors).
+# - OPENAI_OCR_MAX_ATTEMPTS: outer retries in this repo (timeouts/5xx/429) with backoff.
+# - OPENAI_RETRY_BACKOFF_SECONDS: base backoff (seconds), exponential growth per attempt.
+# - OPENAI_RETRY_BACKOFF_MAX_SECONDS: cap for backoff.
+# - OPENAI_VERBOSE_RETRIES: set to true to log retry + fallback details.
+# - OPENAI_FALLBACK_TO_CHAT: set to false to disable responses->chat fallback.
+# - OPENAI_BASE_URL: optional proxy/gateway base url.
+OPENAI_TIMEOUT_SECONDS=120
+OPENAI_MAX_RETRIES=2
+OPENAI_OCR_MAX_ATTEMPTS=3
+OPENAI_RETRY_BACKOFF_SECONDS=1
+OPENAI_RETRY_BACKOFF_MAX_SECONDS=20
+OPENAI_RETRY_BACKOFF_JITTER_SECONDS=0.3
+OPENAI_VERBOSE_RETRIES=false
+OPENAI_FALLBACK_TO_CHAT=true
+# OPENAI_BASE_URL=
+
 # Alibaba DashScope (Qwen) API Key
 # Get one at: https://dashscope.console.aliyun.com/apiKey
 DASHSCOPE_API_KEY=your_dashscope_api_key_here
