--- a/env.example
+++ b/env.example
@@ -16,8 +16,14 @@ OPENAI_API_KEY=your_openai_api_key_here
 # - OPENAI_RETRY_BACKOFF_SECONDS: base backoff (seconds), exponential growth per attempt.
 # - OPENAI_RETRY_BACKOFF_MAX_SECONDS: cap for backoff.
 # - OPENAI_VERBOSE_RETRIES: set to true to log retry + fallback details.
+# - OPENAI_RESPONSES_ONLY: set to true to force Responses API only (no chat fallback).
 # - OPENAI_FALLBACK_TO_CHAT: set to false to disable responses->chat fallback.
 # - OPENAI_BASE_URL: optional proxy/gateway base url.
+# - OPENAI_IMAGE_MAX_SIDE: resize long edge before upload (pixels), smaller is faster.
+# - OPENAI_IMAGE_JPEG_QUALITY: JPEG quality for pre-compressed upload image.
+# - OPENAI_IMAGE_DETAIL: input image detail level (low/high/auto), low is faster.
+# - OPENAI_MAX_OUTPUT_TOKENS: cap output token count to avoid long generations.
+# - OPENAI_REASONING_EFFORT: for GPT-5 family reasoning budget (minimal/low/medium/high).
 OPENAI_TIMEOUT_SECONDS=120
 OPENAI_MAX_RETRIES=2
 OPENAI_OCR_MAX_ATTEMPTS=3
@@ -25,7 +31,13 @@ OPENAI_RETRY_BACKOFF_SECONDS=1
 OPENAI_RETRY_BACKOFF_MAX_SECONDS=20
 OPENAI_RETRY_BACKOFF_JITTER_SECONDS=0.3
 OPENAI_VERBOSE_RETRIES=false
+OPENAI_RESPONSES_ONLY=true
 OPENAI_FALLBACK_TO_CHAT=true
+OPENAI_IMAGE_MAX_SIDE=1600
+OPENAI_IMAGE_JPEG_QUALITY=85
+OPENAI_IMAGE_DETAIL=low
+OPENAI_MAX_OUTPUT_TOKENS=2048
+OPENAI_REASONING_EFFORT=minimal
 # OPENAI_BASE_URL=
 
 # Alibaba DashScope (Qwen) API Key
